--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -11,7 +11,7 @@
     - name: copy war from Jenkins to target host
       copy:
         src: /var/lib/jenkins/workspace/Amar-Deploy-on-Container-using-Ansible/webapp/target/webapp.war
-        dest: /opt/docker/Amar
+        dest: /opt/docker/amar
 
     - name: stop current container
       command: docker stop amar-devops-container
